fixed alignment of businnes card

--- a/public/assets/css/styles-9.css
+++ b/public/assets/css/styles-9.css
@@ -1422,8 +1422,8 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6{
     }
 }
 
-@media only screen and (max-width: 600px) {
-    body {
-        background-color: lightblue;
+@media only screen and (min-width: 1024px) {
+    #business_card {
+        margin-left: 50px;
     }
 }
